--- a/src/app/first-component/first-component.component.html
+++ b/src/app/first-component/first-component.component.html
@@ -1,7 +1,7 @@
-<h1 style="color:red">First Component</h1>
+<h1 style="background-color:red;color: wheat;">First Component</h1>
 <div>
     <div>
-        Size is :
+        Number Is :
     </div>
     <p>
         {{ size }}
