--- a/src/app/second-component/second-component.component.html
+++ b/src/app/second-component/second-component.component.html
@@ -1,7 +1,7 @@
-<h1 style="color:blue">Second Component</h1>
+<h1 style="background-color:blue;color: white;">Second Component</h1>
 <div>
     <div>
-        Size is :
+        Number Is :
     </div>
     <p>
         {{ data.size }}
